2009-10-29  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Darin Adler.

        Allow custom memory allocation control for WebCore's RareData
        https://bugs.webkit.org/show_bug.cgi?id=30858

        Inherits RareData struct from Noncopyable because it is
        instantiated by 'new' in WebCore/css/CSSSelector.h:259 and 
        it is no need to be copyable.

        * css/CSSSelector.h:

2009-10-29  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Darin Adler.

        Allow custom memory allocation control for WebCore's ShorthandScope
        https://bugs.webkit.org/show_bug.cgi?id=30859

        Inherits ShorthandScope class from FastAllocBase because it is 
        instantiated by 'new' in WebCore/css/CSSParser.cpp:902 and 
        it is no need to be copyable.        

        * css/CSSParser.h:

2009-10-29  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Darin Adler.

        Allow custom memory allocation control for WebCore's AXObjectCache
        https://bugs.webkit.org/show_bug.cgi?id=30848

        Inherits AXObjectCache class from FastAllocBase because it is
        instantiated by 'new' in WebCore/dom/Document.cpp:1537 and                                
        it is no need to be copyable.

        * accessibility/AXObjectCache.h:

2009-10-28  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Don't run JavaScript URLs in view source mode
        https://bugs.webkit.org/show_bug.cgi?id=30881

        Just say no.

        Test: http/tests/security/view-source-no-javascript-url.html

        * bindings/ScriptControllerBase.cpp:
        (WebCore::ScriptController::executeIfJavaScriptURL):

2009-10-29  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Unreviewed. Fixes style problems pointed out by Evan Martin.

        * platform/gtk/Language.cpp:
        (WebCore::defaultLanguage):

2009-10-29  Dan Bernstein  <mitz@apple.com>

        Rubber-stamped by Mark Rowe.
