@@ -1,3 +1,13 @@
+2009-10-29  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        Create stub methods for raw cookies access in ChromiumBridge.h
+
+        https://bugs.webkit.org/show_bug.cgi?id=30910
+
+        * platform/chromium/ChromiumBridge.h:
+
 2009-10-29  Zoltan Horvath  <zoltan@webkit.org>
 
         Reviewed by Darin Adler.
